# Apulis-AI-Platform

./: .gitattributes  .gitignore  .gitignore.orig  .gitmodules  DevDocker.md  Installation_zh.md  Jenkinsfile  LICENSE  License.md  NOTICE  README.md  README_CN.md  devenv.py  devenv_arm64.py  install_prerequisites.sh  version-info
.github/workflows/: merger_to_publice.yml  sync_public.yml  sync_public_when_pushed.yml
devenv/: Dockerfile
devenv.arm64/: Dockerfile
dlworkspace-compile/: Dockerfile
dlworkspace-compile/dlworkspace-compile-arm64/: Dockerfile
docs/: CONTRIBUTING.md  Quick_Start.md  RELEASE.md  Readme.md  code-of-conduct_en.md  code-of-conduct_zh_cn.md  governance.md  index.md  mailing_list.md
src/ARM/: README.md
src/ClusterBootstrap/test_npu/driver/kernel/libc_sec/: Android.mk  CMakeLists.txt  Makefile  README  module.mk  module_llt.mk  sample.c  sample.h
src/ClusterBootstrap/test_npu/driver/kernel/libc_sec/src/: CMakeLists.txt  Kconfig  Makefile  fscanf_s.c  fwscanf_s.c  gets_s.c  input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  scanf_s.c  secinput.h  securecmodule.c  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  (+4 more)
src/ClusterBootstrap/test_npu/driver/kernel/libc_sec/win_conf/: libc_sec.vcxproj  module.mk
(+1626 files in other folders)
